--- a/composer.json
+++ b/composer.json
@@ -11,5 +11,10 @@
     "php": ">=5.5.9",
     "twig/twig": "~1.24",
     "inklabs/kommerce-core": "dev-master"
+  },
+  "autoload": {
+    "psr-4": {
+      "inklabs\\KommerceTemplates\\": "src",
+    }
   }
 }
