--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
   "require": {
     "php": ">=5.5.9",
     "twig/twig": "~1.24",
+    "twig/extensions": "~1.3.0",
     "inklabs/kommerce-core": "dev-master"
   },
   "autoload": {
