--- a/composer.json
+++ b/composer.json
@@ -7,12 +7,18 @@
   "support": {
     "source": "https://github.com/inklabs/kommerce-templates"
   },
+  "repositories": [
+    {
+      "url": "https://github.com/inklabs/scssphp.git",
+      "type": "git"
+    }
+  ],
   "require": {
     "php": ">=5.5.9",
     "twig/twig": "~1.24",
     "twig/extensions": "~1.3.0",
     "twbs/bootstrap-sass": "~3.3.7",
-    "leafo/scssphp": "0.6.5",
+    "leafo/scssphp": "dev-master",
     "inklabs/kommerce-core": "dev-master"
   },
   "autoload": {
