--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     "twig/extensions": "~1.3.0",
     "twbs/bootstrap-sass": "~3.3.7",
     "leafo/scssphp": "0.6.5",
+    "codeception/codeception": "^2.2.4",
     "inklabs/kommerce-core": "dev-master"
   },
   "autoload": {
