--- a/codeception/screenshots.suite.yml
+++ b/codeception/screenshots.suite.yml
@@ -8,6 +8,7 @@ class_name: ScreenshotsTester
 modules:
     enabled:
         - WebDriver
+        - \Helper\Acceptance
         - \Helper\Screenshots
     config:
         WebDriver:
