--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,8 @@
   },
   "require": {
     "php": ">=5.5.9",
-    "twig/twig": "~1.24",
-    "twig/extensions": "~1.3.0",
+    "twig/twig": "1.29",
+    "twig/extensions": "1.4.1",
     "twbs/bootstrap-sass": "~3.3.7",
     "leafo/scssphp": "0.6.5",
     "codeception/codeception": "^2.2.4",
