--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     "twbs/bootstrap-sass": "~3.3.7",
     "leafo/scssphp": "0.6.5",
     "codeception/codeception": "^2.2.4",
-    "inklabs/kommerce-core": "dev-master"
+    "inklabs/kommerce-core": "dev-master",
+    "zurb/foundation": "^6.3"
   },
   "autoload": {
     "psr-4": {
