--- a/themes/foundation/package.json
+++ b/themes/foundation/package.json
@@ -1,6 +1,12 @@
 {
   "name": "kommerce-template-foundation",
   "version": "0.0.1",
+  "license": "MIT",
+  "scripts": {
+    "dev": "node_modules/.bin/webpack",
+    "watch": "node_modules/.bin/webpack -w",
+    "prod": "node_modules/.bin/webpack -p"
+  },
   "devDependencies": {
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
